<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="register">Regisztráció</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="password_again">Jelszó ismét</string>
    <string name="email_address">Email cím</string>

    <string-array name="register_spinner_sex">
        <item>Férfi</item>
        <item>Nő</item>
    </string-array>
    <string-array name="array_sex">
        <item>Férfi</item>
        <item>Nő</item>
    </string-array>

    <string name="app_launcher_label">PartyApp</string>
    <string name="title_activity_clubs_list">Szórakozóhelyek listája</string>
    <string name="title_activity_clubs_map">Szórakozóhelyek a térképen</string>
    <string name="title_activity_my_clubs">Saját szórakozóhelyeim</string>
    <string name="title_activity_clubs_search">Szórakozóhelyek keresése</string>
    <string name="title_activity_new_club">Új szórakozóhely</string>
    <string name="title_activity_club_info">Információ</string>
    <string name="title_activity_club_events">Események</string>
    <string name="title_activity_club_galery">Képgaléria</string>
    <string name="title_activity_club_event_details">Esemény részeletei</string>
    <string name="title_activity_club_event_modify">Esemény módosítása</string>
    <string name="title_activity_club_event_new">Új esemény</string>
    <string name="title_activity_club_location">Itt találod</string>
    <string name="title_activity_club_menu">Árlista</string>
    <string name="title_activity_club_reviews">Értékelések</string>
    <string name="title_activity_club_my_review">Saját értékelés</string>
    <string name="title_activity_pending_list">Jóváhagyásra váró elemek</string>
    <string name="club_review_menu_my_review">Saját értékelés</string>
    <string name="club_event_modify_button_modify">Módosítások mentése</string>
    <string name="club_event_description">Esemény leírása</string>
    <string name="club_event_modify_edittext_description">Esemény leírása</string>
    <string name="club_event_modify_edittext_date">Esemény időpontja</string>
    <string name="club_event_modify_edittext_name">Esemény neve</string>
    <string name="club_event_new_button_new">Esemény létrehozása</string>
    <string name="club_event_new_edittext_description">Esemény leírása</string>
    <string name="club_event_new_edittext_name">Esemény neve</string>
    <string name="club_my_review_textview_rating">Hány csillagot adsz a helynek?</string>
    <string name="club_my_review_textview_review">Szöveges értékelésed</string>
    <string name="club_my_review_button_save">Értékelés mentése</string>
    <string name="title_activity_profile">Profilom</string>
    <string name="title_activity_profile_modify">Adatok módosítása</string>
    <string name="title_activity_profile_password">Jelszó módosítása</string>
    <string name="title_activity_club_menu_add">Új tétel hozzáadása</string>
    <string name="title_activity_club_menu_modify">Tétel módosítása</string>
    <string name="title_activity_clubs">ClubsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_club">ClubActivity</string>
    <string name="club_event_new_edittext_date">Esemény időpontja</string>
    <string name="club_menu_modify_textview_category">Kategória</string>
    <string name="club_menu_modify_textview_name">Tétel neve</string>
    <string name="club_menu_modify_textview_price">Ára</string>
    <string name="club_menu_modify_textview_quantity">Mennyisége</string>
    <string name="club_menu_modify_textview_discount">Kedvezmény</string>
    <string name="club_menu_modify_button_add">Módosítás</string>
    <string name="club_menu_add_textview_category">Kategória</string>
    <string name="club_menu_add_textview_name">Tétel neve</string>
    <string name="club_menu_add_textview_price">Ára</string>
    <string name="club_menu_add_textview_quantity">Mennyisége</string>
    <string name="club_menu_add_textview_discount">Kedvezmény</string>
    <string name="toast_login_unsuccesful_text">Sikertelen bejelentkezés! Hibás felhasználónév, vagy jelszó! Próbáld újra</string>
    <string name="clubs_type_spinner_prompt">Vegyes</string>
    <string name="club_service_coctailbar">Koktélbár</string>
    <string name="club_service_dance">Táncparkett</string>
    <string name="club_service_beergarden">Sörkert</string>
    <string name="club_service_pubsports">Kocsmasportok</string>
    <string name="club_service_sportTV">Sport közvetítés</string>
    <string name="club_service_menu">Étkezés, menü</string>
    <string name="club_service_liveMusic">Élő zene</string>
    <string name="club_service_dj">DJ</string>
    <string name="club_service_face_and_dress_control">Face and Dress Control</string>
    <string name="club_service_wifi">WiFi</string>

    <string-array name="logged_users_names">
        <item>a</item>
        <item>admin</item>
        <item>lamfalusy</item>
        <item>kapi.zoli</item>
        <item>Tibi</item>
    </string-array>
    <string-array name="clubs_types">
        <item>Vegyes</item>
        <item>Kocsma</item>
        <item>Pub</item>
        <item>Club</item>
        <item>Étterem</item>
        <item>Sport központ</item>
        <item>Disco</item>
    </string-array>
    <string-array name="clubs_types_for_search">
        <item>Bármelyik</item>
        <item>Vegyes</item>
        <item>Kocsma</item>
        <item>Pub</item>
        <item>Club</item>
        <item>Étterem</item>
        <item>Sport központ</item>
        <item>Disco</item>
    </string-array>
    <string-array name="menu_item_category">
        <item>Ital</item>
        <item>Étel</item>
        <item>Tömény</item>
        <item>Sör</item>
        <item>Desszert</item>
        <item>Egyéb</item>
        <item>Virág</item>
    </string-array>
    <string-array name="menu_item_currency">
        <item>HUF</item>
        <item>EUR</item>
        <item>USD</item>
    </string-array>
    <string-array name="event_music_type">
        <item>Vegyes</item>
        <item>Rock</item>
        <item>Jazz</item>
        <item>Electro</item>
        <item>Metál</item>
        <item>Mulatós</item>
        <item>House</item>
        <item>Dubstep</item>
        <item>Pop</item>
        <item>Egyéb</item>
    </string-array>

    <string name="title_activity_visitor_email">VisitorEmail</string>
    <string name="title_activity_round_email">RoundEmail</string>
    <string name="title_activity_pending_clubs_list">PendingClubsListActivity</string>
    <string name="title_activity_pending_owner_request">PendingOwnerRequest</string>
    <string name="title_activity_club_ratings">ClubRatingsActivity</string>
    <string name="title_activity_club_rating_add">ClubRatingAdd</string>
    <string name="title_activity_pending_ratings">PendingRatingsActivity</string>
    <string name="title_activity_club_info_modify">ClubInfoModifyActivity</string>
    <string name="title_activity_pending_image">PendingImageActivity</string>
    <string name="title_activity_peding_full_image">PedingFullImageActivity</string>

</resources>
