<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/register_edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        style="@style/CustomEditText"/>

    <EditText
        android:id="@+id/register_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
		style="@style/CustomEditText"/>

    <EditText
        android:id="@+id/register_edittext_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_again"
        android:inputType="textPassword"
		style="@style/CustomEditText" />

    <EditText
        android:id="@+id/register_edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
		style="@style/CustomEditText" />
    
     <EditText
        android:id="@+id/register_edittext_dateofbirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Születési idő"
        android:onClick="onClickHandler"
        android:focusable="false"
        android:focusableInTouchMode="false"
		style="@style/CustomEditText" />

     <Spinner
        android:id="@+id/register_spinner_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/register_spinner_sex"
		style="@style/CustomEditText"
        />     
    
    
    <Button
        android:id="@+id/register_button_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/CustomPurpleButtonHeight"
        android:text="@string/register" 
        android:onClick="onClickHandler"
        style="@style/CustomPurpleButton"/>


    
</LinearLayout>