<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_logo" 
        android:scaleType="fitStart"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" 
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="110dp">
        
         <EditText
        android:id="@+id/login_edittext_name"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:singleLine="true"
        android:text="a" />

    <EditText
        android:id="@+id/login_edittext_password"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:text="a" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/login_button_login"
        style="@style/CustomPurpleButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/CustomPurpleButtonHeight"
        android:onClick="onClickHandler"
        android:text="@string/login" />

    <Button
        android:id="@+id/login_button_register"
        style="@style/CustomPurpleButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/CustomPurpleButtonHeight"
        android:onClick="onClickHandler"
        android:text="@string/register" />
    </LinearLayout>


</RelativeLayout>