<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/club_event_new_imageview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/club_event_new_edittext_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/club_event_new_imageview"
        android:layout_toRightOf="@+id/club_event_new_imageview"
        android:hint="@string/club_event_new_edittext_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/club_event_new_edittext_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/club_event_new_edittext_name"
        android:layout_below="@+id/club_event_new_edittext_name"
        android:hint="@string/club_event_new_edittext_description"/>

    <EditText
        android:id="@+id/club_event_new_edittext_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/club_event_new_imageview"
        android:layout_below="@+id/club_event_new_imageview"
        android:layout_above="@+id/club_event_new_button_modify"
        android:inputType="textMultiLine"
        android:hint="@string/club_event_new_edittext_description" 
        android:gravity="top"/>

    <Button
        android:id="@+id/club_event_new_button_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/club_event_new_button_new" />

</RelativeLayout>
