<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/club_event_modify_edittext_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/club_event_modify_edittext_description"
        android:layout_alignParentRight="true"
        android:hint="@string/club_event_modify_edittext_name" 
        style="@style/CustomEditText">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/club_event_modify_edittext_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_alignParentLeft="true"        
        android:layout_below="@+id/club_event_modify_edittext_name"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="Esemény napja"
        style="@style/CustomEditText" />
    
    <EditText
        android:id="@+id/club_event_modify_edittext_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/club_event_modify_edittext_date"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/club_event_modify_edittext_name"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="Ideje"
        style="@style/CustomEditText" />

    <EditText
        android:id="@+id/club_event_modify_edittext_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/club_event_modify_music_type_spinner"
        android:layout_below="@+id/club_event_modify_edittext_date"
        android:gravity="top"
        android:hint="@string/club_event_modify_edittext_description"
        android:inputType="textMultiLine"
        style="@style/CustomEditText" />

    <Button
        android:id="@+id/club_event_modify_button_modify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/CustomPurpleButtonHeight"
        android:layout_alignParentBottom="true"
        android:text="@string/club_event_modify_button_modify"
        style="@style/CustomPurpleButton" />

    <Spinner
        android:id="@+id/club_event_modify_music_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/club_event_modify_button_modify"
        android:layout_alignLeft="@+id/club_event_modify_button_modify"
        android:layout_alignParentRight="true"
        android:entries="@array/event_music_type"
        style="@style/CustomEditText" />

</RelativeLayout>